apps/architecture-portal/versioned_docs/version-1.0.49.0/core/modules/provider-sdk.mdx
---
title: Provider SDK
area: core
status: implemented
owners: [core, providers]
module: provider-sdk
source_paths: [packages/provider-sdk, tests/core/provider]
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';
import {DiagramFrame} from '@site/src/components/DiagramFrame';

<BuildIdentity kind="modules" id="provider-sdk" />

<DiagramFrame title="Provider SDK Module" diagramId="provider-sdk" />

## 1. 目的与非职责
定义 Capability、Registry、Attempt Store 与 Provider 边界；不选择产品 Provider。
## 2. 当前实现状态
Capability v2、Registry、Attempt isolation 与 owned Artifact 字节执行已实现。
## 3. 所有权与依赖
仅依赖 Foundation；Provider 实现位于 `providers/`。
## 4. 架构与数据流
Host/Workspace 显式注入 owner resolver、输入/输出总量限制和共享 staging budget。
SDK 在 run 前复制输入，校验声明的 hash、长度、端口与权限，再通过 ArtifactSource
提供原请求顺序的端口 occurrence。持有的输入句柄保留预算 lease，直到最后引用释放。
ProviderRunContext 按值传递并持有不可变请求；source/sink 只允许 run 原线程同步调用。
错误线程调用会锁存失败，run 返回后关闭回调，迟到调用拒绝且不改写 terminal。
## 5. API 与 Artifact 边界
Provider 从不接收可变 Project 或 bundle path，只接收 Artifact。
每个输出端口必须由消费者注册 validator（可声明 scratch 字节预算）；SDK 不解析
WAV 或 Slice JSON。输出复制、总量/数量校验与所有已产生输出的 schema 验证完成后才发布。
Provider 仍返回单个 Candidate；Job、CandidateIndex 和 Slice interval 展开由 Facade 的 Workspace owner 拥有。
## 6. 状态、错误与生命周期
Provider failure 属于 Attempt；取消、失败和输出身份均有隔离边界。
输入拒绝保留 `input_binding_invalid`、`input_artifact_unavailable`、
`input_artifact_mismatch` 或 `input_artifact_too_large`；输出拒绝保留
`output_contract_invalid` 或 `output_schema_invalid`。消费者声明的领域 code/reason
可传播，Provider 自报 SDK 输入/输出原因不能通过。持久化会移除 Provider 消息和额外字段。
terminal 是结果可见性边界；发布或 terminal 写入中断保留 reservation 并拒绝重用 ID，
不自动清理 orphan。共享预算约束 SDK staging，并不声称限制进程 RSS 或强制中止超时 run。
Native 路径上，terminal Attempt JSON 与 minted artifact bytes 在成功返回前会对文件和父目录执行 `fsync`。Host settings writer 使用 kernel-owned advisory `flock(LOCK_EX | LOCK_NB)` 覆盖完整 read-modify-atomic-rename；竞争 writer 以 `host settings are busy` fail fast，owner 进程退出时内核自动释放锁。互斥边界只覆盖 cooperating SDK writers：它们持久复用 `.host-settings.lock`，不得 unlink 或替换该路径；acquisition 后的 `lstat` 只检测 open/flock 期间发生的 pathname identity 变化，检查完成后的外部同 UID pathname tamper 不在该互斥保证内。读取保持 lock-free，因为 `host-settings.json` 仍以 atomic rename 发布；缺失的 Provider 选择仍返回 `PROVIDER_NOT_FOUND`。
## 7. 产品使用方
Application Facade 和两个本地 Proof Provider 使用 SDK。
## 8. 测试与证据
Conformance、attempt isolation、Host settings invariant 与 spec regression 测试；跨进程 invariant 会同步确认 live owner contention，并在 owner 被终止和回收后验证下一次写入成功。
ArtifactSource、output validation 和 callback stress 覆盖字节身份、生命周期与共享预算。
execution crash 在 reservation、staging、validation、publication、terminal 边界 SIGKILL，
新进程检查完整输出 hash/长度、旧 terminal 不变及 interrupted ID 不可重用。
## 9. 限制与下一门禁
生产/云 Provider、鉴权和隐私政策尚未实现。
## 10. 版本身份
SDK 与 Provider 各自独立 SemVer，由 Assembly Lock 组合。

## Trusted resolver 完整性错误

输入 resolver 仅可保留精确的 `IO_ERROR/input_artifact_mismatch` 组合；额外详情被清除。
其他 resolver 错误归一化为 `NOT_FOUND/input_artifact_unavailable`。Provider 自身的错误
白名单不扩大，不能伪装这一 Core 完整性错误。权限、绑定和预算先于 resolver 执行。
该修正保留现有 Provider SDK API/ABI；Slice 参考 Provider 同样使用 owned source/sink。

SDK 复用既有 Project I/O Web platform factory 创建的 OPFS workspace 挂载。SDK 选择与执行在 origin-scoped
Web Lock 内串行发布；浏览器销毁 Worker 时释放锁。Web 使用完整文件 move 替代 native
hard link，Artifact 目录按文件发布后才写 terminal；中断的 reservation 不可复用，
部分输出不构成成功终态。Native 的原子 hard-link 与 fsync 路径保持原有语义。

## Verified terminal output reader

`AttemptStore::read_candidate_artifact` 只读取成功 terminal 中精确绑定的 Artifact，
接受调用方的 byte bound，检查文件类型、长度、完整读取与 SHA-256 后返回字节副本。
它不向调用方暴露 SDK 内部路径，也不修改 terminal 或输出文件；Facade 用它恢复与
验证 Workspace Candidate Sets。空输出仍按完整 Artifact identity 校验。
`provider.attempt_output_read` 覆盖绑定、大小限制、空输出、损坏、缺失及符号链接拒绝。
新 Workspace 尚无 Attempt 目录时，inspect 返回 `NOT_FOUND`，不创建目录或伪造终端。
